ui data upload, ordinal settings, bug fix
- moved back to lists of data
- added data send to ui 
- changed all variable names to match back end
- fixed frame properties being null 
- moved tests to use list instead of number couple